<resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="maps_key">0DjDjZPPUT1SCsxeIxkduemcXUkYnxtPSw7s0lQ</string>
    <string name="com_juick">com.juickadvanced</string>
    <string name="Juick">Juick Advanced</string>
    <string name="JuickMicroblog">Juick</string>
    <string name="BNWMicroblog">BnW</string>
    <string name="PstoMicroblog">psto.net</string>
    <string name="PointMicroblog">point.im</string>
    <string name="Facebook">Facebook</string>
    <string name="Loading___">Loading...</string>
    <string name="Loading___report">Loading... Complex report may take minute or two...</string>
    <string name="LoadingBackup___">Loading (backup)...</string>
    <string name="Please_wait___">Please wait...</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="Save">Save</string>
    <string name="Create">Create</string>
    <string name="Send">Send</string>
    <string name="Settings">Settings</string>
    <string name="Filters">Local user filter...</string>
    <string name="Signout">Signout</string>
    <string name="Error">Error</string>
    <string name="blog">blog</string>
    <string name="Refresh">Refresh</string>
    <string name="Share">Share</string>
    <string name="Map">Map</string>
    <string name="Details">Details</string>
    <string name="Search">Search</string>
    <string name="Find">Find</string>
    <string name="Tag">Tag</string>
    <string name="Tags">Tags</string>
    <string name="Replies">Replies</string>
    <string name="Enter_a_message">Enter a message</string>
    <string name="Message_posted">Message posted</string>
    <string name="Enter_a_name">Enter a name</string>
    <string name="Your_messages">Your messages</string>
    <string name="Juick_profile">Juick profile</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="Juick__Explore">Juick: Explore</string>
    <string name="Popular_tags">Popular tags</string>
    <string name="All_messages">All messages</string>
    <string name="All_subscriptions">All subscriptions</string>
    <string name="Nearby_places">Nearby places</string>
    <string name="My_blog">My blog</string>
    <string name="Recommend_message">Recommend message</string>
    <string name="Subscribe_to">Subscribe to</string>
    <string name="SubscribeAndOpen">Subscribe to and open</string>
    <string name="DeleteMessage">Delete</string>
    <string name="Unsubscribe_from">Unsubscribe from</string>
    <string name="Blacklist">Blacklist</string>
    <string name="Blacklist2">Blacklist</string>
    <string name="FilterOutUser">Filter out</string>
    <string name="ExpandMessage">Expand message from</string>
    <string name="OpenThread">Open thread</string>
    <string name="Recommended">Recommended</string>
    <string name="Subscribed">Subscribed</string>
    <string name="Deleted">Deleted (probably)</string>
    <string name="Unsubscribed">Unsubscribed</string>
    <string name="Added_to_BL">Added to BL</string>
    <string name="Save_message">Save message</string>
    <string name="Unsave_message">Remove from saved</string>
    <string name="Message_saved">Message saved</string>
    <string name="Message_unsaved">Message removed from saved</string>
    <string name="Are_you_sure_recommend">Are you sure you want to recommend?</string>
    <string name="Are_you_sure_subscribe">Are you sure you want to subscribe?</string>
    <string name="Are_you_sure_blacklist">Are you sure you want to blacklist?</string>
    <string name="CensorSubmitTokenForReview1">Submit</string>
    <string name="CensorSubmitTokenForReview2">to censor for review</string>
    <string name="CensorSubmitWordSelectionError">Censor: word selection error</string>
    <string name="CensorSubmitForReviewConfirmation">Are you sure you want to submit this word to censor for review?"</string>
    <string name="CensorSubmitForReviewChooseSuggestedLevel">Choose suggested level</string>
    <string name="CensorSubmittedForReview">The word has been submitted to censor for review</string>
    <string name="Replies_">Replies:</string>
    <string name="Juick__New_message">Juick: New message</string>
    <string name="BnW__New_message">BnW: New message</string>
    <string name="Psto__New_message">psto: New message</string>
    <string name="Point__New_message">point: New message</string>
    <string name="Facebook__New_message">Facebook: New message</string>
    <string name="Point__PostNote"> - use *tag1 *tag2 text</string>
    <string name="New_message">New message</string>
    <string name="To__All">To: All</string>
    <string name="Attach">Attach</string>
    <string name="Photo_from_gallery">Photo from gallery</string>
    <string name="New_photo">New photo</string>
    <string name="Video_from_gallery">Video from gallery</string>
    <string name="New_video">New video</string>
    <string name="Location_">Location:</string>
    <string name="Attachment__photo">Attachment: Photo</string>
    <string name="Attachment__video">Attachment: Video</string>
    <string name="Pick_a_location">Pick a location</string>
    <string name="Place_name_">Place name:</string>
    <string name="Impersonal_description_">Impersonal description:</string>
    <string name="Tags__separated_by_spaces__">Tags (separated by spaces):</string>
    <string name="Website_">Website:</string>
    <string name="New_place">New place</string>
    <string name="Notifications">Notifications</string>
    <string name="Refresh_interval">Refresh interval</string>
    <string name="Message_List">Messages list</string>
    <string name="Show_Numbers">Show message number</string>
    <string name="Compressed_Menu">Condensed menu</string>
    <string name="Position_can_be_reset">Position can be reset to latest by refreshing messages</string>
    <string name="Message_numbers_will_be_shown">Message and reply numbers will be shown</string>
    <string name="Save_position">Save position</string>
    <string name="Message_font_scale_factor">Message font scale factor</string>
    <string name="Menu_font_scale_factor">Menu font scale factor</string>
    <string name="Confirm_asctions">Confirm actions</string>
    <string name="Such_as_blacklist_recommend">...such as blacklist, recommend etc</string>
    <string name="Compressed_Menu_Summary">More items in message menu will fit on the screen</string>
    <string name="Colors">Colors</string>
    <string name="PostReply">Post a reply</string>
    <string name="navigationTop">Juick Top</string>
    <string name="navigationPhoto">Juick Photos</string>
    <string name="navigationMy">Juick My Blog</string>
    <string name="navigationSrachiki">Jugregator Srachiki</string>
    <string name="navigationUnread">Juick Other Unread</string>
    <string name="navigationSaved">Saved messages</string>
    <string name="SingleLine_Menu">Single line menu items</string>
    <string name="SingleLine_Menu_Summary">Menu will be even more compact</string>
    <string name="XMPP_client">XMPP (Jabber) client</string>
    <string name="XMPP_config">XMPP config</string>
    <string name="XMPP_enabled">XMPP enabled</string>
    <string name="Not_set_up">Not set up</string>
    <string name="Activate_when_finished">Activate it after you finished setting up account details</string>
    <string name="Send_on_command">Send \'ON\' command after connect?</string>
    <string name="VerboseEventNotifications">Verbose event notifications</string>
    <string name="ChooseSound">Choose sound</string>
    <string name="SoundEnabled">Sound enabled</string>
    <string name="VibrationEnabled">Vibration enabled</string>
    <string name="LEDEnabled">LED enabled</string>
    <string name="VibrationInCurrentThread">Vibration in current thread</string>
    <string name="LoadImages">Load attached images</string>
    <string name="OnOffProxy">off / full / proxy ?</string>
    <string name="LoadImageMode">Load image mode</string>
    <string name="ImageProxyLogin">Fastun.com login</string>
    <string name="ImageProxyPassword">Fastun.com password</string>
    <string name="DaysToKeepCachedImages">Days to keep cached images</string>
    <string name="ImageHeight">Image height (% of screen)</string>
    <string name="MarkAlreadyReadMessages">Mark already read messages</string>
    <string name="EnableLocalStorage">Enable local storage</string>
    <string name="ForBetterLife">..for better life</string>
    <string name="DaysToKeepStoredMessages">Days to keep stored messages</string>
    <string name="EnableFontScaleByGesture">Enable fonts scale by gesture</string>
    <string name="UserIdForMyBlog">User ID for \'My Blog\'</string>
    <string name="LeaveItEmptyIfUnknown">Leave it empty if unknown</string>
    <string name="PrefetchMoreMessages">Prefetch more messages</string>
    <string name="AndNeverSeeLoading">...and never see `loading..`</string>
    <string name="PreviewRepliesBeforeSend">Preview composed replies</string>
    <string name="PreviewRepliesBeforeSend2">...before sending</string>
    <string name="WarnRepliesWithoutReplyTo">Warn replies to /0</string>
    <string name="WarnRepliesWithoutReplyTo2">Сheck respondent before sending comment</string>
    <string name="CapitalizeReplyText">Auto-capitalize text</string>
    <string name="AccuracyOfLocation">Accuracy of location</string>
    <string name="WhenReplying">..when typing in reply</string>
    <string name="CameraCapture">Camera capture</string>
    <string name="CaptureIntoTempFile">Capture into temp file (bugfix)</string>
    <string name="Debug">Debug</string>
    <string name="EnableDiagnosticMessages">Enable diagnostic messages</string>
    <string name="CommonBackground">Common background</string>
    <string name="CommonForeground">Common foreground</string>
    <string name="ListDivider">List divider</string>
    <string name="Usernames">Usernames</string>
    <string name="UserNamesRead">Usernames (read msgs)</string>
    <string name="URLs">URLs</string>
    <string name="MessageIDs">Message IDs</string>
    <string name="NumberOfrComments">Number of comments</string>
    <string name="TranslatedLabel">``Translated`` label</string>
    <string name="Dates">Dates</string>
    <string name="IndirectImages">Indirect images</string>
    <string name="Gelbooru">...from known sites like gelbooru.com. Requires extra traffic.</string>
    <string name="UseBackupServer">Use backup server where possible</string>
    <string name="EnableHttpCompression">Enable HTTP compression</string>
    <string name="CompressionSlowsDown">HTTP compression may actually slow down fetch, but certainly will save traffic</string>
    <string name="AskForPhotoResize">Ask for photo resize</string>
    <string name="OnlyWorksWithAboveCheckboxOn">Only works with above checkbox on</string>
    <string name="OnlyNeededIfUsing">Only needed is using this proxy</string>
    <string name="JuBoFilters">View JuBo/Juick stop lists...</string>
    <string name="OtherImages">Images From URLs</string>
    <string name="OtherImages2">..that are not located on juick.com</string>
    <string name="FullsizeDownloadOverMobile">Fullsize downloads over mobile</string>
    <string name="WhenDownloading___">When downloading full size images, use wifi or mobile, otherwise queue until wifi
        available
    </string>
    <string name="SynchronizeOnJAServer">Synchronize on JA Server</string>
    <string name="WillSynchronize">Will synchronize message read markers and Saved Messages. Across devices and
        reinstalls.
    </string>
    <string name="SendAnonUsageReports">Send anon usage reports</string>
</resources>