<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="persistLastMessagesPosition"
            android:title="@string/Save_position"
            android:summary="@string/Position_can_be_reset"
            android:defaultValue="false"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="lastReadMessages"
            android:title="@string/MarkAlreadyReadMessages"
            android:defaultValue="false"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="prefetchMessages"
            android:title="@string/PrefetchMoreMessages"
            android:summary="@string/AndNeverSeeLoading"
            android:defaultValue="false"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="enableScaleByGesture"
            android:title="@string/EnableFontScaleByGesture"
            android:defaultValue="true"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="confirmActions"
            android:title="@string/Confirm_asctions"
            android:summary="@string/Such_as_blacklist_recommend"
            android:defaultValue="true"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="previewReplies"
            android:title="@string/PreviewRepliesBeforeSend"
            android:summary="@string/PreviewRepliesBeforeSend2"
            android:defaultValue="false"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="warnRepliesToBody"
            android:title="@string/WarnRepliesWithoutReplyTo"
            android:summary="@string/WarnRepliesWithoutReplyTo2"
            android:defaultValue="false"
            android:persistent="true"/>
    <CheckBoxPreference
            android:key="capitalizeReplies"
            android:title="@string/CapitalizeReplyText"
            android:summary="@string/WhenReplying"
            android:defaultValue="false"
            android:persistent="true"/>
    <PreferenceCategory android:title="@string/CameraCapture">
        <CheckBoxPreference
            android:key="useTempFileForCapture"
            android:title="@string/CaptureIntoTempFile"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="askForResize"
            android:title="@string/AskForPhotoResize"
            android:summary="@string/OnlyWorksWithAboveCheckboxOn"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>

</PreferenceScreen>