<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/Notifications">
        <ListPreference
            android:key="refresh"
            android:title="@string/Refresh_interval"
            android:entries="@array/prefsRefreshIntervalTitles"
            android:entryValues="@array/prefsRefreshIntervalValues"
            android:defaultValue="5"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/XMPP_client">
        <com.juick.android.XMPPPreference
                android:key="xmpp_config"
                android:defaultValue=""
                android:summary="@string/Not_set_up"
                android:title="@string/XMPP_config"
                android:persistent="true">
        </com.juick.android.XMPPPreference>
        <CheckBoxPreference
            android:key="useXMPP"
            android:title="@string/XMPP_enabled"
            android:summary="@string/Activate_when_finished"
            android:defaultValue="false"
            android:persistent="true"/>
        <ListPreference
            android:key="juickBotOn"
            android:title="@string/Send_on_command"
            android:defaultValue="skip"
            android:entries="@array/juickBotOnLabels"
            android:entryValues="@array/juickBotOnValues"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="xmpp_verbose"
            android:title="@string/VerboseEventNotifications"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Notifications">
        <RingtonePreference
                android:key="ringtone_uri"
                android:defaultValue=""
                android:title="@string/ChooseSound"
                android:ringtoneType="all"
                android:persistent="true">
        </RingtonePreference>
        <CheckBoxPreference
            android:key="ringtone_enabled"
            android:title="@string/SoundEnabled"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="vibration_enabled"
            android:title="@string/VibrationEnabled"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="led_enabled"
            android:title="@string/LEDEnabled"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="current_vibration_enabled"
            android:title="@string/VibrationInCurrentThread"
            android:defaultValue="true"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/LoadImages">
        <ListPreference
            android:key="image.loadMode"
            android:summary="@string/OnOffProxy"
            android:title="@string/LoadImageMode"
            android:entries="@array/imageLoadMode"
            android:entryValues="@array/imageLoadModeValues"
            android:defaultValue="off"
            android:persistent="true"/>
        <EditTextPreference
            android:key="imageproxy.login"
            android:title="@string/ImageProxyLogin"
            android:defaultValue=""
            android:persistent="true"/>
        <EditTextPreference
            android:key="imageproxy.password"
            android:title="@string/ImageProxyPassword"
            android:defaultValue=""
            android:persistent="true"/>
        <EditTextPreference
            android:key="image.daystokeep"
            android:title="@string/DaysToKeepCachedImages"
            android:defaultValue="10"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="image.indirect"
            android:title="@string/IndirectImages"
            android:summary="@string/Gelbooru"
            android:defaultValue="true"
            android:persistent="true"/>
        <ListPreference
            android:key="image.height_percent"
            android:title="@string/ImageHeight"
            android:entries="@array/imageHeight"
            android:entryValues="@array/imageHeightValues"
            android:defaultValue="0.3"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Message_List">
        <CheckBoxPreference
            android:key="persistLastMessagesPosition"
            android:title="@string/Save_position"
            android:summary="@string/Position_can_be_reset"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="lastReadMessages"
            android:title="@string/MarkAlreadyReadImages"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="showNumbers"
            android:title="@string/Show_Numbers"
            android:summary="@string/Message_numbers_will_be_shown"
            android:defaultValue="false"
            android:persistent="true"/>
        <ListPreference
            android:key="useBackupServer"
            android:title="@string/UseBackupServer"
            android:entries="@array/useJABackupTitles"
            android:entryValues="@array/useJABackup"
            android:defaultValue="-1"
            android:persistent="true"/>
        <CheckBoxPreference
                android:key="http_compression"
                android:title="@string/EnableHttpCompression"
                android:summary="@string/CompressionSlowsDown"
                android:defaultValue="false"
                android:persistent="true"/>
        <CheckBoxPreference
                android:key="enableMessageDB"
                android:title="@string/EnableLocalStorage"
                android:summary="@string/ForBetterLife"
                android:defaultValue="false"
                android:persistent="true"/>
        <EditTextPreference
                android:key="messageDBperiod"
                android:title="@string/DaysToKeepStoredMessages"
                android:defaultValue="30"
                android:persistent="false"/>
        <CheckBoxPreference
            android:key="confirmActions"
            android:title="@string/Confirm_asctions"
            android:summary="@string/Such_as_blacklist_recommend"
            android:defaultValue="true"
            android:persistent="true"/>
        <ListPreference
            android:key="messagesFontScale"
            android:title="@string/Message_font_scale_factor"
            android:entries="@array/scaleFontSize"
            android:entryValues="@array/scaleFontSize"
            android:defaultValue="1.0"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="enableScaleByGesture"
            android:title="@string/EnableFontScaleByGesture"
            android:defaultValue="true"
            android:persistent="true"/>
        <ListPreference
            android:key="menuFontScale"
            android:title="@string/Menu_font_scale_factor"
            android:entries="@array/scaleFontSize"
            android:entryValues="@array/scaleFontSize"
            android:defaultValue="1.0"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="compressedMenu"
            android:title="@string/Compressed_Menu"
            android:summary="@string/Compressed_Menu_Summary"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="singleLineMenu"
            android:title="@string/SingleLine_Menu"
            android:summary="@string/SingleLine_Menu_Summary"
            android:defaultValue="false"
            android:persistent="true"/>
        <EditTextPreference
            android:key="myUserId"
            android:title="@string/UserIdForMyBlog"
            android:summary="@string/LeaveItEmptyIfUnknown"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="prefetchMessages"
            android:title="@string/PrefetchMoreMessages"
            android:summary="@string/AndNeverSeeLoading"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/PostReply">
        <CheckBoxPreference
            android:key="previewReplies"
            android:title="@string/PreviewRepliesBeforeSend"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="warnRepliesToBody"
            android:title="@string/WarnRepliesWithoutReplyTo"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
                android:key="capitalizeReplies"
                android:title="@string/CapitalizeReplyText"
                android:summary="@string/WhenReplying"
                android:defaultValue="false"
                android:persistent="true"/>
        <ListPreference
                android:key="locationAccuracy"
                android:title="@string/AccuracyOfLocation"
                android:entries="@array/prefsAccuracyTitles"
                android:entryValues="@array/prefsAccuracyValues"
                android:defaultValue="ACCURACY_FINE"
                android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/CameraCapture">
        <CheckBoxPreference
            android:key="useTempFileForCapture"
            android:title="@string/CaptureIntoTempFile"
            android:defaultValue="true"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Debug">
        <CheckBoxPreference
            android:key="verboseDebug"
            android:title="@string/EnableDiagnosticMessages"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Colors">
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.COMMON_BACKGROUND"
            android:title="@string/CommonBackground"
            android:defaultValue="0xFFFFFFFF"
            android:persistent="true"/>
<!--
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.BUTTON_BACKGROUND"
            android:title="Button background"
            android:defaultValue="0xFFFFFFFF"
            android:persistent="true"/>
-->
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.COMMON_FOREGROUND"
            android:title="@string/CommonForeground"
            android:defaultValue="0xFF000000"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.DIVIDER"
            android:title="@string/ListDivider"
            android:defaultValue="0xFF808080"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.USERNAME"
            android:title="@string/Usernames"
            android:defaultValue="0xFFC8934E"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.USERNAME_READ"
            android:title="@string/UserNamesRead"
            android:defaultValue="0xFFc84e4e"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.TAGS"
            android:title="@string/Tags"
            android:defaultValue="0xFF0000CC"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.URLS"
            android:title="@string/URLs"
            android:defaultValue="0xFF0000CC"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.MESSAGE_ID"
            android:title="@string/MessageIDs"
            android:defaultValue="0xFFa0a5bd"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.NUMBER_OF_COMMENTS"
            android:title="@string/NumberOfrComments"
            android:defaultValue="0xFFC8934E"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.TRANSLATED_LABEL"
            android:title="@string/TranslatedLabel"
            android:defaultValue="0xFF4ec856"
            android:persistent="true"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Colors.DATE"
            android:title="@string/Dates"
            android:defaultValue="0xFFAAAAAA"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/MessageSources">
        <CheckBoxPreference
            android:key="msrcTopMessages"
            android:title="@string/navigationTop"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="msrcWithPhotos"
            android:title="@string/navigationPhoto"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="msrcMyBlog"
            android:title="@string/navigationMy"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="msrcSrachiki"
            android:title="@string/navigationSrachiki"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="msrcUnread"
            android:title="@string/navigationUnread"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference
            android:key="msrcSaved"
            android:title="@string/navigationSaved"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>
<!--
    <PreferenceCategory android:title="@string/Appearance">
        <ListPreference
            android:key="theme"
            android:title="@string/Theme"
            android:entries="@array/prefsThemesTitles"
            android:entryValues="@array/prefsThemesValues"
            android:defaultValue="0"
            android:persistent="true"/>
    </PreferenceCategory>
-->
</PreferenceScreen>